# codec

./: Makefile.am  Makefile.in  README  README.txt  TODO.txt  configure
octave/: lsp_pdf.m  phase.m  phase2.m  pitch_test.m  pl.m  pl2.m  plamp.m  plnlp.m  plphase.m  plpitch.m  plvoicing.m  pulse.m
script/: menu.sh  playraw.sh  raw2wav.sh  wav2raw.sh
speex/: lsp.h
src/: Makefile  Makefile.am  Makefile.in  c2dec.c  c2enc.c  c2sim.c  code.sh  codec2.c  codec2.h  comp.h  defines.h  dump.c  dump.h  four1.c  generate_codebook.c  globals.c  globals.h  glottal.c  initdec.c  initenc.c  interp.c  interp.h  listen.sh  listen1.sh  listensim.sh  lpc.c  lpc.h  lsp.c  lsp.h  nlp.c  nlp.h  phase.c  phase.h  postfilter.c  postfilter.h  quantise.c  quantise.h  refine.c  sim.sh  sine.c  (+8 more)
unittest/: Makefile  Makefile.am  Makefile.in  extract.c  genlsp.c  genres.c  lsp2.txt  lsp3.txt  lsp4.txt  lsptest.c  sd.c  sd.h  tcodec2.c  tcontphase.c  tinterp.c  tnlp.c  tquant.c  vq_clip_test.c  vqtrain.c
